src/generated/MiniLangParser.py
# Generated from E:\codigos vscode\grammar\MiniLang.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniLangParser ( Parser ):

    grammarFileName = "MiniLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'if'", "'else'", 
                     "'while'", "'do'", "'print'", "'true'", "'false'", 
                     "'int'", "'bool'", "'const'", "'new'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<='", "'<'", "'='", "'!'", "'+'", 
                     "'-'", "'*'", "'/'", "'{'", "'}'", "'('", "')'", "'['", 
                     "']'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "LINECOMMENT", "BLOCKCOMMENT", "IF", 
                      "ELSE", "WHILE", "DO", "PRINT", "TRUE", "FALSE", "INT_KW", 
                      "BOOL_KW", "CONST", "NEW", "ANDAND", "OROR", "EQEQ", 
                      "NE", "LE", "LT", "ASSIGN", "NOT", "PLUS", "MINUS", 
                      "TIMES", "DIV", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
                      "LBRACK", "RBRACK", "SEMI", "COMMA", "NUM", "ID", 
                      "WS" ]

    RULE_program = 0
    RULE_block = 1
    RULE_stmts = 2
    RULE_stmt = 3
    RULE_decl = 4
    RULE_type_spec = 5
    RULE_print_stmt = 6
    RULE_if_stmt = 7
    RULE_while_stmt = 8
    RULE_do_while_stmt = 9
    RULE_expr_stmt = 10
    RULE_expr = 11
    RULE_logical_or = 12
    RULE_logical_and = 13
    RULE_equality = 14
    RULE_relational = 15
    RULE_additive = 16
    RULE_multiplicative = 17
    RULE_unary = 18
    RULE_primary = 19

    ruleNames =  [ "program", "block", "stmts", "stmt", "decl", "type_spec", 
                   "print_stmt", "if_stmt", "while_stmt", "do_while_stmt", 
                   "expr_stmt", "expr", "logical_or", "logical_and", "equality", 
                   "relational", "additive", "multiplicative", "unary", 
                   "primary" ]

    EOF = Token.EOF
    LINECOMMENT=1
    BLOCKCOMMENT=2
    IF=3
    ELSE=4
    WHILE=5
    DO=6
    PRINT=7
    TRUE=8
    FALSE=9
    INT_KW=10
    BOOL_KW=11
    CONST=12
    NEW=13
    ANDAND=14
    OROR=15
    EQEQ=16
    NE=17
    LE=18
    LT=19
    ASSIGN=20
    NOT=21
    PLUS=22
    MINUS=23
    TIMES=24
    DIV=25
    LBRACE=26
    RBRACE=27
    LPAREN=28
    RPAREN=29
    LBRACK=30
    RBRACK=31
    SEMI=32
    COMMA=33
    NUM=34
    ID=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(MiniLangParser.BlockContext,0)


        def EOF(self):
            return self.getToken(MiniLangParser.EOF, 0)

        def getRuleIndex(self):
            return MiniLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.block()
            self.state = 41
            self.match(MiniLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(MiniLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(MiniLangParser.RBRACE, 0)

        def stmts(self):
            return self.getTypedRuleContext(MiniLangParser.StmtsContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = MiniLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(MiniLangParser.LBRACE)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 51885653992) != 0):
                self.state = 44
                self.stmts()


            self.state = 47
            self.match(MiniLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLangParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniLangParser.StmtContext,i)


        def getRuleIndex(self):
            return MiniLangParser.RULE_stmts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmts" ):
                listener.enterStmts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmts" ):
                listener.exitStmts(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmts" ):
                return visitor.visitStmts(self)
            else:
                return visitor.visitChildren(self)




    def stmts(self):

        localctx = MiniLangParser.StmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmts)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 49
                self.stmt()
                self.state = 52 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 51885653992) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(MiniLangParser.BlockContext,0)


        def decl(self):
            return self.getTypedRuleContext(MiniLangParser.DeclContext,0)


        def print_stmt(self):
            return self.getTypedRuleContext(MiniLangParser.Print_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(MiniLangParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(MiniLangParser.While_stmtContext,0)


        def do_while_stmt(self):
            return self.getTypedRuleContext(MiniLangParser.Do_while_stmtContext,0)


        def expr_stmt(self):
            return self.getTypedRuleContext(MiniLangParser.Expr_stmtContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = MiniLangParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmt)
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.block()
                pass
            elif token in [10, 11, 12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.decl()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.print_stmt()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.if_stmt()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 5)
                self.state = 58
                self.while_stmt()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 6)
                self.state = 59
                self.do_while_stmt()
                pass
            elif token in [8, 9, 13, 21, 23, 28, 34, 35]:
                self.enterOuterAlt(localctx, 7)
                self.state = 60
                self.expr_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_spec(self):
            return self.getTypedRuleContext(MiniLangParser.Type_specContext,0)


        def ID(self):
            return self.getToken(MiniLangParser.ID, 0)

        def SEMI(self):
            return self.getToken(MiniLangParser.SEMI, 0)

        def CONST(self):
            return self.getToken(MiniLangParser.CONST, 0)

        def LBRACK(self):
            return self.getToken(MiniLangParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(MiniLangParser.RBRACK, 0)

        def ASSIGN(self):
            return self.getToken(MiniLangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniLangParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MiniLangParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 63
                self.match(MiniLangParser.CONST)


            self.state = 66
            self.type_spec()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 67
                self.match(MiniLangParser.LBRACK)
                self.state = 68
                self.match(MiniLangParser.RBRACK)


            self.state = 71
            self.match(MiniLangParser.ID)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 72
                self.match(MiniLangParser.ASSIGN)
                self.state = 73
                self.expr()


            self.state = 76
            self.match(MiniLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_KW(self):
            return self.getToken(MiniLangParser.INT_KW, 0)

        def BOOL_KW(self):
            return self.getToken(MiniLangParser.BOOL_KW, 0)

        def getRuleIndex(self):
            return MiniLangParser.RULE_type_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_spec" ):
                listener.enterType_spec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_spec" ):
                listener.exitType_spec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_spec" ):
                return visitor.visitType_spec(self)
            else:
                return visitor.visitChildren(self)




    def type_spec(self):

        localctx = MiniLangParser.Type_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            _la = self._input.LA(1)
            if not(_la==10 or _la==11):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(MiniLangParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(MiniLangParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiniLangParser.ExprContext,i)


        def RPAREN(self):
            return self.getToken(MiniLangParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(MiniLangParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLangParser.COMMA)
            else:
                return self.getToken(MiniLangParser.COMMA, i)

        def getRuleIndex(self):
            return MiniLangParser.RULE_print_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_stmt" ):
                listener.enterPrint_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_stmt" ):
                listener.exitPrint_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_stmt" ):
                return visitor.visitPrint_stmt(self)
            else:
                return visitor.visitChildren(self)




    def print_stmt(self):

        localctx = MiniLangParser.Print_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_print_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(MiniLangParser.PRINT)
            self.state = 81
            self.match(MiniLangParser.LPAREN)
            self.state = 82
            self.expr()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 83
                self.match(MiniLangParser.COMMA)
                self.state = 84
                self.expr()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(MiniLangParser.RPAREN)
            self.state = 91
            self.match(MiniLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MiniLangParser.IF, 0)

        def LPAREN(self):
            return self.getToken(MiniLangParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniLangParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(MiniLangParser.RPAREN, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLangParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniLangParser.StmtContext,i)


        def ELSE(self):
            return self.getToken(MiniLangParser.ELSE, 0)

        def getRuleIndex(self):
            return MiniLangParser.RULE_if_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt" ):
                listener.enterIf_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt" ):
                listener.exitIf_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stmt" ):
                return visitor.visitIf_stmt(self)
            else:
                return visitor.visitChildren(self)




    def if_stmt(self):

        localctx = MiniLangParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(MiniLangParser.IF)
            self.state = 94
            self.match(MiniLangParser.LPAREN)
            self.state = 95
            self.expr()
            self.state = 96
            self.match(MiniLangParser.RPAREN)
            self.state = 97
            self.stmt()
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 98
                self.match(MiniLangParser.ELSE)
                self.state = 99
                self.stmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(MiniLangParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(MiniLangParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniLangParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(MiniLangParser.RPAREN, 0)

        def stmt(self):
            return self.getTypedRuleContext(MiniLangParser.StmtContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_while_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stmt" ):
                listener.enterWhile_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stmt" ):
                listener.exitWhile_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stmt" ):
                return visitor.visitWhile_stmt(self)
            else:
                return visitor.visitChildren(self)




    def while_stmt(self):

        localctx = MiniLangParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(MiniLangParser.WHILE)
            self.state = 103
            self.match(MiniLangParser.LPAREN)
            self.state = 104
            self.expr()
            self.state = 105
            self.match(MiniLangParser.RPAREN)
            self.state = 106
            self.stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Do_while_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(MiniLangParser.DO, 0)

        def stmt(self):
            return self.getTypedRuleContext(MiniLangParser.StmtContext,0)


        def WHILE(self):
            return self.getToken(MiniLangParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(MiniLangParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniLangParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(MiniLangParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(MiniLangParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniLangParser.RULE_do_while_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDo_while_stmt" ):
                listener.enterDo_while_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDo_while_stmt" ):
                listener.exitDo_while_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDo_while_stmt" ):
                return visitor.visitDo_while_stmt(self)
            else:
                return visitor.visitChildren(self)




    def do_while_stmt(self):

        localctx = MiniLangParser.Do_while_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_do_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(MiniLangParser.DO)
            self.state = 109
            self.stmt()
            self.state = 110
            self.match(MiniLangParser.WHILE)
            self.state = 111
            self.match(MiniLangParser.LPAREN)
            self.state = 112
            self.expr()
            self.state = 113
            self.match(MiniLangParser.RPAREN)
            self.state = 114
            self.match(MiniLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MiniLangParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(MiniLangParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniLangParser.RULE_expr_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_stmt" ):
                listener.enterExpr_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_stmt" ):
                listener.exitExpr_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_stmt" ):
                return visitor.visitExpr_stmt(self)
            else:
                return visitor.visitChildren(self)




    def expr_stmt(self):

        localctx = MiniLangParser.Expr_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expr_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.expr()
            self.state = 117
            self.match(MiniLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical_or(self):
            return self.getTypedRuleContext(MiniLangParser.Logical_orContext,0)


        def ASSIGN(self):
            return self.getToken(MiniLangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniLangParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = MiniLangParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.logical_or()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 120
                self.match(MiniLangParser.ASSIGN)
                self.state = 121
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_orContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical_and(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLangParser.Logical_andContext)
            else:
                return self.getTypedRuleContext(MiniLangParser.Logical_andContext,i)


        def OROR(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLangParser.OROR)
            else:
                return self.getToken(MiniLangParser.OROR, i)

        def getRuleIndex(self):
            return MiniLangParser.RULE_logical_or

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_or" ):
                listener.enterLogical_or(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical_or" ):
                listener.exitLogical_or(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical_or" ):
                return visitor.visitLogical_or(self)
            else:
                return visitor.visitChildren(self)




    def logical_or(self):

        localctx = MiniLangParser.Logical_orContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_logical_or)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.logical_and()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 125
                self.match(MiniLangParser.OROR)
                self.state = 126
                self.logical_and()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_andContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equality(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLangParser.EqualityContext)
            else:
                return self.getTypedRuleContext(MiniLangParser.EqualityContext,i)


        def ANDAND(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLangParser.ANDAND)
            else:
                return self.getToken(MiniLangParser.ANDAND, i)

        def getRuleIndex(self):
            return MiniLangParser.RULE_logical_and

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_and" ):
                listener.enterLogical_and(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical_and" ):
                listener.exitLogical_and(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical_and" ):
                return visitor.visitLogical_and(self)
            else:
                return visitor.visitChildren(self)




    def logical_and(self):

        localctx = MiniLangParser.Logical_andContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_logical_and)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.equality()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 133
                self.match(MiniLangParser.ANDAND)
                self.state = 134
                self.equality()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relational(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLangParser.RelationalContext)
            else:
                return self.getTypedRuleContext(MiniLangParser.RelationalContext,i)


        def EQEQ(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLangParser.EQEQ)
            else:
                return self.getToken(MiniLangParser.EQEQ, i)

        def NE(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLangParser.NE)
            else:
                return self.getToken(MiniLangParser.NE, i)

        def getRuleIndex(self):
            return MiniLangParser.RULE_equality

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEquality" ):
